--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,9 +1,55 @@
 <div class="scroll-btn">
-    <button class="scroll" id="scroll-top"><i class="fa fa-arrow-up"></i></button>
+  <button class="scroll" id="scroll-top"><i class="fa fa-arrow-up"></i></button>
 </div>
 
-<footer>
-    <div class="footer">
-        <h5>Copyright By VinaWatch&copy;</h5>
+<!-- <footer> -->
+<div class="footer-top">
+  <div class="footer-list">
+    <div class="footer-item">
+      <img src="https://cdn3.dhht.vn/wp-content/uploads/hai-trieu/hotline.png" alt="logo" />
     </div>
-</footer>
+    <div class="footer-item">
+      <h5>hướng dẫn</h5>
+      <ul>
+        <li>Thông tin liên hệ</li>
+        <li>Hỏi đáp - Góp ý</li>
+        <li>Chính sách đổi hàng</li>
+        <li>Chính sách bảo hành</li>
+        <li>Vận chuyển và giao nhận</li>
+        <li>Liên hệ đối tác doanh nghiệp</li>
+      </ul>
+    </div>
+    <div class="footer-item">
+      <h5>Tham khảo</h5>
+      <ul>
+        <li>Thông báo mới</li>
+        <li>Điều khoản sử dụng</li>
+        <li>Bảo mật thông tin</li>
+        <li>Ngưng hiện quảng cáo</li>
+      </ul>
+      <img src="https://cdn3.dhht.vn/wp-content/uploads/2019/09/thong-bao-bo-cong-thuong.png"
+        alt="BCT">
+    </div>
+    <div class="footer-item">
+      <h5>chứng nhận</h5>
+      <img src="https://cdn3.dhht.vn/wp-content/uploads/2021/12/icon-dai-ly-chinh-thuc.png"
+        alt="chungnhan">
+      <img src="https://cdn3.dhht.vn/wp-content/uploads/2021/12/icon-phong-bao-hanh.png" alt="aa">
+    </div>
+  </div>
+
+  <!-- <h5>Copyright By VinaWatch&copy;</h5> -->
+</div>
+<div class="footer-bottom">
+  <div class="footer-bottom-list">
+    <div class="footer-bottom-left">
+      <p>Copyright by Đồng Hồ Casio® 2022</p>
+      <span>Góp ý & Khiếu nại: ceo@donghohaitrieu.com</span>
+    </div>
+    <div class="footer-bottom-right">
+      <img src="https://cdn3.dhht.vn/wp-content/uploads/2015/02/hinh-thuc-thanh-toan.png" alt="a">
+    </div>
+  </div>
+
+</div>
+<!-- </footer> -->
