--- a/src/app/shared/components/footer/footer.component.css
+++ b/src/app/shared/components/footer/footer.component.css
@@ -5,7 +5,7 @@
     }
 }
 
-@media (max-width: 414){
+@media (max-width: 414px){
     .scroll-btn button{
         bottom: 0px;
         right: 16px;
@@ -14,6 +14,7 @@
 .footer-top{
   background: #800202;
   color: #FFFFFF;
+  margin-top: 20px;
 }
 .footer-list{
   display: flex;
