change backend connection

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -43,8 +43,8 @@
 <div class="footer-bottom">
   <div class="footer-bottom-list">
     <div class="footer-bottom-left">
-      <p>Copyright by Đồng Hồ Casio® 2022</p>
-      <span>Góp ý & Khiếu nại: ceo@donghohaitrieu.com</span>
+      <p>Copyright by Nguyễn Kim Long, Nguyễn Tấn Lộc, Châu Báo Hoàng</p>
+      <span>Góp ý & Khiếu nại: ceo@st.huflit.edu.vn</span>
     </div>
     <div class="footer-bottom-right">
       <img src="https://cdn3.dhht.vn/wp-content/uploads/2015/02/hinh-thuc-thanh-toan.png" alt="a">
